Kubernetes/deployment-apache.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: apache

spec:
  replicas: 1
  selector:
    matchLabels:
      componente: apache

  template:
    metadata:
      labels:
        componente: apache

      spec:
        volumes:
          - name: volumen-apache
            persistenVolumeClaim:
              claimName: reclamacion

        containers:
          - name: apache
            image: httpd:2.4-alpine
            ports:
              - containerPort: 80
            volumeMounts:
              - name: volumen-apache
                mountPath: /usr/local/apache2/htdocs
                subPath: compartida
