Kubernetes/deployment-orientdb.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: orientdb

spec:
  replicas: 1
  selector:
    matchLabels:
      componente: orientdb

  template:
    metadata:
      labels:
        componente: orientdb

      spec:
        containers:
          - name: orientdb
            image: orientdb:3.0
            ports:
              - containerPort: 2424
