Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress
  labels:
    name: ingress

spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: raiz
                port:
                  number: 80
